--- a/front-end/src/welfie.scss
+++ b/front-end/src/welfie.scss
@@ -10,3 +10,7 @@ html,
 body {
   font-family: "Muli", "Fira Sans", serif;
 }
+
+.modal {
+  z-index: 50 !important;
+}
